--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+  <modelVersion>5.0.0-M5</modelVersion>
   <groupId>JunitTesting_581</groupId>
   <artifactId>JunitTesting_581</artifactId>
   <version>0.0.1-SNAPSHOT</version>
