--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>5.0.0-M5</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
   <groupId>JunitTesting_581</groupId>
   <artifactId>JunitTesting_581</artifactId>
   <version>0.0.1-SNAPSHOT</version>
@@ -15,4 +15,13 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+    <!-- Other dependencies -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.x.x</version>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
 </project>
