--- a/pom.xml
+++ b/pom.xml
@@ -17,17 +17,11 @@
   </build>
   <dependencies>
     <!-- Other dependencies -->
-    <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.9</version>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-api</artifactId>
-        <version>5.x.x</version>
-        <scope>test</scope>
-    </dependency>
+   <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.0.0-M5</version>
+      <scope>test</scope>
+  </dependency>
 </dependencies>
 </project>
