--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>compile</version>
-            <scope>test</scope>
+            <version>5.10.1</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
